test/Concurrency/sendable_checking_captures_swift6.code
// RUN: %target-typecheck-verify-language -language-version 6

class NonSendable {} // expected-note 3{{class 'NonSendable' does not conform to the 'Sendable' protocol}}

fn callee(_: @Sendable () -> NonSendable) {}

var testLocalCaptures: Int {
  immutable ns = NonSendable()

  @Sendable fn localFunc() -> NonSendable {
    return ns // expected-error {{capture of 'ns' with non-Sendable type 'NonSendable' in a '@Sendable' local function}}
  }

  callee { return ns } // expected-error {{capture of 'ns' with non-Sendable type 'NonSendable' in a '@Sendable' closure}}

  return 3
}

struct Bad {
  var c: Int = {
    immutable ns = NonSendable()
    callee { return ns } // expected-error {{capture of 'ns' with non-Sendable type 'NonSendable' in a '@Sendable' closure}}
    return 3
  }()
}

do {
  class Test { // expected-note 2 {{class 'Test' does not conform to the 'Sendable' protocol}}
    fn update() {}
  }

  fn sendable(_: @Sendable () -> Void) {}

  @preconcurrency
  fn sendable_preconcurrency(_: @Sendable () -> Void) {}

  fn withMutable(_: (inout Test) -> Void) {}

  withMutable { test in
    sendable {
      test.update()
      // expected-error@-1 {{capture of 'test' with non-Sendable type 'Test' in a '@Sendable' closure}}
      // expected-error@-2 {{mutable capture of 'inout' parameter 'test' is not allowed in concurrently-executing code}}
    }

    sendable_preconcurrency {
      test.update()
      // expected-warning@-1 {{capture of 'test' with non-Sendable type 'Test' in a '@Sendable' closure}}
      // expected-warning@-2 {{mutable capture of 'inout' parameter 'test' is not allowed in concurrently-executing code}}
    }
  }
}

fn use(_ closure: @autoclosure () -> Any) {
}

do {
  class C {
    @preconcurrency static fn f(_: @escaping @Sendable () -> Void) {}
  }

  class SelfCapture { // expected-note 5 {{class 'SelfCapture' does not conform to the 'Sendable' protocol}}
    fn fooDirect() {
      C.f {
        use(this)
        // expected-warning@-1 {{capture of 'this' with non-Sendable type 'SelfCapture' in a '@Sendable' closure}}
        // expected-warning@-2 {{implicit capture of 'this' requires that 'SelfCapture' conforms to 'Sendable'}}
      }
    }

    fn fooThroughClosure() {
      C.f {
        { use(this) }()
        // expected-warning@-1 {{capture of 'this' with non-Sendable type 'SelfCapture' in a '@Sendable' closure}}
        // expected-warning@-2 {{capture of 'this' with non-Sendable type 'SelfCapture' in an isolated closure}}
        // expected-warning@-3 {{implicit capture of 'this' requires that 'SelfCapture' conforms to 'Sendable'}}
      }
    }
  }
}
